--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: zakker
-description: "A new Flutter project."
+description: "تطبيق احترافي لمتابعة حفظ القرآن الكريم."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -35,6 +35,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   shared_preferences: ^2.5.3
+  flutter_riverpod: ^3.0.3
+  google_fonts: ^6.3.2
+  flutter_svg: ^2.2.2
 
 dev_dependencies:
   flutter_test:
