--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   flutter_riverpod: ^3.0.3
   google_fonts: ^6.3.2
   flutter_svg: ^2.2.2
+  quran: ^1.3.3
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
