--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   flutter_svg: ^2.2.2
   quran: ^1.3.3
   intl: ^0.20.2
+  flutter_launcher_icons: ^0.14.4
+  flutter_native_splash: ^2.4.7
 
 dev_dependencies:
   flutter_test:
@@ -51,7 +53,22 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/app_icon.png" 
+  adaptive_icon_background: "#1E3A8A" 
+  adaptive_icon_foreground: "assets/app_icon.png" 
+  min_sdk_android: 21
 
+flutter_native_splash:
+  image: assets/app_icon.png 
+  color: "#1E3A8A" 
+  android: true
+  android_gravity: center 
+  ios: true
+  ios_content_mode: center
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
